# dreamhelper

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
services/brain-core/: .dockerignore  Dockerfile  SECURITY_AUDIT_BRAIN_CORE.md  consciousness_fallback.db  pyproject.toml  requirements.txt  startup_err.txt  startup_log.txt  startup_out.txt  test_mcp_dynamic.py  test_nvidia.py
services/brain-core/prompts/: SOUL.md
services/brain-core/src/: main.py
services/brain-core/src/common/: admin_auth.py  api_auth.py  config.py  errors.py  logging_config.py  metrics.py  prompt_guard.py  rate_limit.py  sanitizer.py  sentry_setup.py  (+1 more)
services/brain-core/tests/: conftest.py  test_adaptive_chunker.py  test_agent_router.py  test_audio_skills.py  test_browser_agent.py  test_code_exec.py  test_coding_skills.py  test_compaction.py  test_daily_skills.py  test_document_skills.py  test_dual_brain.py  test_entertainment_skills.py  test_fusion_cache.py  test_hook_registry.py  test_hooks.py  test_image_skills.py  test_llm_client.py  test_mcp_config.py  test_memory_manager.py  test_multimodal.py  test_office_skills.py  test_plan_execute_agent.py  test_proactive.py  test_query_enhancer.py  test_rag_pipeline.py  test_rag_sources.py  test_reranker.py  test_sanitizer.py  test_security_middleware.py  test_skill_engine.py  test_smoke.py  test_vision.py  test_webhook_router.py  test_weight_tracker.py
(+558 files in other folders)
